Styles/IndexStyle.css
#home {
	padding: 20px;
	padding-top: 100px;
}

#about {
	margin: auto;
	width: 75%;
	padding: 20px;
	margin-bottom: 15px;
	border-radius: 25px;
	background-image: linear-gradient(to top, #222831, #1C273C);
}

#skills {
	margin: auto;
	width: 75%;
	padding: 20px;
	margin-bottom: 15px;
	border-radius: 25px;
	background-image: linear-gradient(to top, #F2FFFD, #e8ffff);
	text-align:center
}

@media screen and (max-width: 800px) {
	#about, #skills {
		width: auto;
		border-radius: 0px;
	}
	.bio {
		margin-left: 25px;
		margin-right: 25px;
	}
}

/* My contact information icons */
.icon-contact {
	width: auto;
	height: 40px;
	padding-right: 20px;
}

.bio {
	color: #F2F7F5 ;
	padding: 10px;
	font-family: 'IBM Plex Mono', monospace; 
}

.center-table {
	margin-left: auto;
	margin-right: auto;
}

.itsme {
	box-shadow: 0px 4px 6px 2px #222831;
	display: block;
	width: 350px;
	height: auto;
	border-radius: 50%;
	margin-left: auto;
	margin-right: auto;
	margin-top: 25px;
}

@media screen and (max-width: 375px) {
	.itsme {
		width: 80%;
	}
}

